--- a/home.html
+++ b/home.html
@@ -49,6 +49,18 @@
                 </section>
             </div>
         </article>
-        <footer class="clear">Footer</footer>
+        <footer class="footerContainer clear">
+            <ul class="footerLeftContent">
+                <li>Hakkında</li>
+                <li>Blog</li>
+                <li>Yardım</li>
+                <li>Gizlilik Politikası</li>
+                <li>Kullanım Şartları</li>
+                <li>Bize Ulaşın</li>
+            </ul>
+            <ul class="footerRightContent">
+                <li class="tr flag">tr</li>
+            </ul>
+        </footer>
     </body>
 </html>
