--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
         <script src="assets/js/script.js" type="text/javascript"></script>
         <script src="assets/js/flowtype.js" type="text/javascript"></script>
         <script src="assets/js/pace.min.js" type="text/javascript"></script>
-        <script src="assets/js/semantic.min.js" type="text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/semantic.min.css">
+        <script src="semantic/dist/semantic.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/pace-theme-flash.css">
@@ -59,7 +59,10 @@
                 <li>Bize Ulaşın</li>
             </ul>
             <ul class="footerRightContent">
-                <li class="tr flag">tr</li>
+                <li><a href="#"><i class="tr flag"></i></a></li>
+                <li><a href="#"><i class="us flag"></i></a></li>
+                <li><a href="#"><i class="gb flag"></i></a></li>
+                <li><a href="#"><i class="de flag"></i></a></li>
             </ul>
         </footer>
     </body>
