--- a/app/home.html
+++ b/app/home.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Magel.la</title>
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="assets/js/script.js" type="text/javascript"></script>
-        <script src="assets/js/flowtype.js" type="text/javascript"></script>
-        <script src="assets/js/pace.min.js" type="text/javascript"></script>
+        <script src="assets/js/ext/jquery-2.2.0.min.js" type="text/javascript"></script>
+        <script src="assets/js/ext/flowtype.js" type="text/javascript"></script>
+        <script src="assets/js/ext/pace.min.js" type="text/javascript"></script>
         <script src="semantic/dist/semantic.min.js"></script>
+        <script src="assets/js/script.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/normalize.css">
-        <link rel="stylesheet" href="assets/css/pace-theme-flash.css">
-        <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/ext/normalize.css">
+        <link rel="stylesheet" href="assets/css/ext/pace-theme-flash.css">
+        <link rel="stylesheet" href="assets/css/ext/reset.css">
     </head>
     <script type="text/javascript">
         /*$('body').flowtype({minimum: 500, maximum: 2000});
